        (closes # 84)

2021-11-17 David Hughes
	* docs/hmrc.html src/parse.c
	Added support for strftime (3) formatting in the append_filename configuration
	option to allow for archived messages to be split over multiple directories
	(monthly or yearly for example)

2021-06-04 Baptiste Daroussin
	* src/uudecode.c src/parse.c
	Fixes for memory issues detected by libasan

2021-09-07 Jose Kahan
	* src/string.c
	Make unrre() returN NOSUBJECT when a subject is made only of
        one or more Re: (or equivalent) strings

	* src/parse.c
	findre() was being too greedy and detecting all Re: strings
	even if they were not at the beginning of a subject

	* src/setup.c src/setup.h src/print.c src/hypermail.c
	Move all CSS statements to an external CSS file called by default
	hypermail.css. Hypermail will generate that file if it's missing
	and if either the index or message CSS URLs are not declared.
	This name can be configured thru the set_hypermail_css variable.

	* src/string.c
	Very long mail subjects were not being handled correctly and could
	result in invalid markup.

	* src/hypermail.h
	changed the link pointing to the hypermail project to the github
	repository

	* src/print.c src/printfile.c
	updated markup to HTML5. Reviewed and enhanced the WAI related markup

	* src/hypermail.c src/setup.[ch] src/print.c
	new configuration option mhtmlnavbar2upfile to specify a specific
	navbar for messages. By default uses the value of ihtmlnavbar2upfile

2020-08-27 Jose Kahan
	* src/string.c
	extended parseurl() in a naive approach for supporting U+00A0
	nonbreakable space inside sscanf. This function should eventually be
	rewritten to use libpcre

2020-06-19 Jose Kahan
	* src/domains.c
	valid_root_domains() was validating a domain name against the
	historical DNS domains such as .org, .com. DNS has evolved and allows a
	bigger variety of domains than those this function verified. That part
	of the function has been invalidated and will be either eventually